version/0.4/_sources/api/ansys/speos/core/generic/constants/index.rst.txt






The ``constants.py`` module
===========================

.. py:module:: ansys.speos.core.generic.constants


Summary
-------








.. py:currentmodule:: constants
.. tab-set::









    .. tab-item:: Constants

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~DEFAULT_HOST`
            - Default host used by Speos RPC server and client


          * - :py:obj:`~DEFAULT_PORT`
            - Default port used by Speos RPC server and client


          * - :py:obj:`~DEFAULT_VERSION`
            - Latest supported Speos version of the current PySpeos Package


          * - :py:obj:`~MAX_MESSAGE_LENGTH`
            - Maximum message length value accepted by the Speos RPC server,















Description
-----------

Collection of all constants used in pySpeos.

..
    !! processed by numpydoc !!






Module detail
-------------

.. py:data:: DEFAULT_HOST
   :value: 'localhost'


   
   Default host used by Speos RPC server and client 
















   ..
       !! processed by numpydoc !!

.. py:data:: DEFAULT_PORT
   :value: '50098'


   
   Default port used by Speos RPC server and client 
















   ..
       !! processed by numpydoc !!

.. py:data:: DEFAULT_VERSION
   :value: '251'


   
   Latest supported Speos version of the current PySpeos Package
















   ..
       !! processed by numpydoc !!

.. py:data:: MAX_MESSAGE_LENGTH

   
   Maximum message length value accepted by the Speos RPC server,
   By default, value stored in environment variable SPEOS_MAX_MESSAGE_LENGTH or 268 435 456.
















   ..
       !! processed by numpydoc !!



